--- a/exercises/CW_0_2.ipynb
+++ b/exercises/CW_0_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deustch-Jozsa algorithm"
+    "# Deutsch–Jozsa algorithm"
    ]
   },
   {
